# log_hightlight_krep

./: .gitignore  FEATURES.md  LICENSE  Makefile  README.md  aho_corasick.c  aho_corasick.h  compile_simple_example.bat  dll_exports.txt  krep  krep.c  krep.h  test_krep  upload_to_git.sh
advanced/: krep_advanced.def
docs/: COMPLETE_DLL_GUIDE.md  FINAL_TEST_REPORT.md  index.html
examples/: Makefile  basic_search.c  example_usage.c  file_search.c  performance_demo.c
headers/: krep_simple.h
include/: krep_advanced.h
krep-advanced-dll-release/: .gitignore  CMakeLists.txt  README.md  VERSION  compile_advanced_example.bat
krep-advanced-dll-release/.github/workflows/: ci.yml
krep-advanced-dll-release/docs/: USER_GUIDE.md
krep-advanced-dll-release/examples/: test_advanced.c
krep-advanced-dll-release/headers/: krep_advanced.h
krep-advanced-dll-release/simple/: krep_simple.def
test/: test_compat.h  test_directory.c  test_krep.c  test_krep.h  test_multiple_patterns.c  test_regex.c
